--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Petroula Karacosta
-email: your-email@example.com
+email: pkaracosta_AT_gmail_DOT_com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my personal website. The content and ideas presented here only reflect my personal opinions.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  pkaracosta
+linkedin_username: imthelittlestone
+instagram_username: imthelittlestone
 
 # Build settings
 theme: minima
