--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Petroula Karacosta
-email: pkaracosta_AT_gmail_DOT_com
+email: pkaracosta AT gmail DOT com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is my personal website. The content and ideas presented here only reflect my personal opinions.
+  The content and ideas presented here reflect my personal opinions only.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pkaracosta
